--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -4,17 +4,12 @@ on:
   push:
     branches: ["main"]
 
-# env:
-#   DATABRICKS_CLIENT_ID: ${{secrets.DATABRICKS_CLIENT_ID}}
-#   DATABRICKS_CLIENT_SECRET: ${{secrets.DATABRICKS_CLIENT_SECRET}}
-#   DATABRICKS_HOST: ${{secrets.DATABRICKS_HOST}}
-
 jobs:
   get-deployed-app:
     name: Get deployed app.
     runs-on: ubuntu-latest
     outputs:
-      push-dir: ${{ steps.get_changed_folders.outputs.push_dir }}
+      push-dir: ${{ steps.get_changed_folders.outputs.push_dir }}  # Output the push_dir from the step
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -26,16 +21,16 @@ jobs:
           CHANGED_FOLDERS=$(git diff-tree --no-commit-id --name-only -r HEAD | awk -F'/' '{print $1}' | sort | uniq)
           echo "PUSH_DIR=${CHANGED_FOLDERS}" >> $GITHUB_STATE
           echo "push_dir=${CHANGED_FOLDERS}" >> $GITHUB_OUTPUT
-          
+
   Deploy:
     name: Make App Distribution
     runs-on: ubuntu-latest
-    needs: get-deployed-app
+    needs: get-deployed-app  # Ensure this job runs after 'get-deployed-app'
     environment: databricks
 
     defaults:
       run:
-        working-directory:  ${{ needs.get-deployed-app.outputs.push-dir }}
+        working-directory: ${{ needs.get-deployed-app.outputs.push-dir }}  # Correctly reference push-dir output from the previous job
 
     steps:
       - name: Checkout repository
@@ -46,4 +41,4 @@ jobs:
 
       - name: test
         run: |
-          echo "Deploying to folder: ${{ needs.get-changed-folders.outputs.push-dir }}"
+          echo "Deploying to folder: ${{ needs.get-deployed-app.outputs.push-dir }}"
