--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -9,22 +9,14 @@ jobs:
     name: Get deployed app
     runs-on: ubuntu-latest
     outputs:
-      push-dir: ${{ steps.get_changed_folders.outputs.push_dir }}  # Output the push_dir from the step
+      push-dir: ${{ steps.validate_changes.outputs.push_dir }}
+      valid-changes: ${{ steps.validate_changes.outputs.valid_changes }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Fetch all history to properly check differences
           
-      - name: Get changed folders
-        id: get_changed_folders
-        run: |
-          # Get changed folders
-          CHANGED_FOLDERS=$(git diff-tree --no-commit-id --name-only -r HEAD | awk -F'/' '{print $1}' | sort | uniq)
-          echo "PUSH_DIR=${CHANGED_FOLDERS}" >> $GITHUB_ENV
-          echo "push_dir=${CHANGED_FOLDERS}" >> $GITHUB_OUTPUT
-          echo "Changed folders: ${CHANGED_FOLDERS}"
-
       - name: Validate changes
         id: validate_changes
         run: |
@@ -37,25 +29,41 @@ jobs:
           
           # Check if there are any valid folders
           if [ -z "$VALID_FOLDERS" ]; then
-            echo "No valid folder changes detected, skipping deployment"
+            echo "No valid folder changes detected, stopping pipeline (successfully)"
             echo "valid_changes=false" >> $GITHUB_OUTPUT
+            echo "push_dir=" >> $GITHUB_OUTPUT
+            # Success message for logs
+            echo "::notice::Pipeline stopped successfully - no valid folder changes detected"
           else
             echo "Valid folder changes detected: $VALID_FOLDERS"
             echo "valid_changes=true" >> $GITHUB_OUTPUT
-            # Update push_dir to only include valid folders
             echo "push_dir=${VALID_FOLDERS}" >> $GITHUB_OUTPUT
+          fi
+
+  check-continue:
+    name: Check if pipeline should continue
+    needs: get-deployed-app
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - name: Check valid changes
+        run: |
+          if [ "${{ needs.get-deployed-app.outputs.valid-changes }}" != "true" ]; then
+            echo "No valid folder changes, stopping pipeline successfully"
+            exit 0
+          else
+            echo "Valid changes detected, continuing pipeline"
           fi
           
   deploy:
     name: Make App Distribution
     runs-on: ubuntu-latest
-    needs: get-deployed-app  # Ensure this job runs after 'get-deployed-app'
-
+    needs: [get-deployed-app, check-continue]
     if: needs.get-deployed-app.outputs.valid-changes == 'true'
     environment: databricks
     defaults:
       run:
-        working-directory: ${{ needs.get-deployed-app.outputs.push-dir }}  # Correctly reference push-dir output from the previous job
+        working-directory: ${{ needs.get-deployed-app.outputs.push-dir }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
